--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,5 +1,4 @@
 .c-footer {
-  color: gray;
   font-size: 0.9rem;
   margin-top: 3rem;
 }
